--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,4 @@
 <br />
 <br />
 <br />
-You can get my <a href="https://marketplace.visualstudio.com/items?itemName=danwahlin.angular2-snippets" target="_blank">Angular (v2+) snippets</a> for the VS Code editor <a href="https://marketplace.visualstudio.com/items?itemName=danwahlin.angular2-snippets" target="_blank">here</a>.
+You can get my <a href="https://marketplace.visualstudio.com/items?itemName=danwahlin.angular2-snippets" target="_blank">Angular snippets</a> for the VS Code editor <a href="https://marketplace.visualstudio.com/items?itemName=danwahlin.angular2-snippets" target="_blank">here</a>.
